--- a/home/style.css
+++ b/home/style.css
@@ -1,31 +1,39 @@
 nav {
   box-shadow: none;
 }
+
 nav ul a {
   color: #f44336;
   font-size: 15px;
 }
+
 .box-content {
   border-radius: 20px;
   padding: 10px;
 }
+
 .conatinerMine {
   margin-bottom: 0;
 }
+
 .box-content h5 {
   font-weight: 500;
   padding-bottom: 8px;
 }
-.box-content h5,
-.box-content p,
-.box-content span {
+
+.box-content h5, .box-content p, .box-content span {
   color: #fff;
 }
+
 .box-content ul li a {
   color: black;
   background-color: #fff;
   border-radius: 5px;
   padding: 5px;
+}
+
+.modal-content h4, .modal-content h5, .tagWord {
+  font-weight: 500;
 }
 
 .modal-content ul li a {
@@ -49,7 +57,7 @@ nav ul a {
   display: inline-block;
 }
 
-.tag-item + .tag-item {
+.tag-item+.tag-item {
   margin-left: 4px;
 }
 
@@ -65,9 +73,19 @@ p.location {
   margin-left: 5px;
   vertical-align: middle;
 }
+
+.social {
+  display: flex;
+}
+
+.social a{
+  margin-left: 2%;
+}
+
 .iconMine {
   vertical-align: middle;
 }
+
 .infoBtn {
   border-radius: 20px;
   height: 44px;
@@ -78,6 +96,9 @@ p.location {
   margin-top: 8px;
   height: 32px;
   width: 32px;
+}
+.hidden{
+  display: none;
 }
 
 @media only screen and (max-width: 600px) {
